fix: align layout distortions with bootstrap addition

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,15 @@
 .card-body {
   padding: 0.9rem !important;
 }
+
+.main-header {
+  padding: .5rem;
+}
+
+.navbar-expand .navbar-nav .nav-link {
+  padding: .5rem 1rem;
+}
+
+a {
+  text-decoration: none;
+}
